--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
     "@tsconfig/svelte": "^3.0.0",
+    "@vitejs/plugin-vue": "^2.2.4",
+    "autoprefixer": "^10.4.2",
+    "daisyui": "^2.6.0",
+    "postcss": "^8.4.7",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "ts-node": "^10.9.1"
   }
 }
