--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.0.23",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0",
-    "ts-node": "^10.9.1"
+    "vite": "^3.1.0"
+  },
+  "dependencies": {
+    "svelte-navigator": "^3.2.2"
   }
 }
