--- a/.github/workflows/deploy9000.yml
+++ b/.github/workflows/deploy9000.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Update /var/www/a9000.io
         run: |
           rm -rf /var/www/a9000.io/*
-          cp -r dist/* /var/www/a9000.io
+          cp -r build/* /var/www/a9000.io
